--- a/src/components/card_editor/card_editor.module.css
+++ b/src/components/card_editor/card_editor.module.css
@@ -3,20 +3,48 @@
   src: url(../../font/NanumGothic-Bold.ttf);
 }
 
+@font-face {
+  font-family: "ONE-Mobile-Title";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2105_2@1.0/ONE-Mobile-Title.woff")
+    format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "paybooc-Light";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-07@1.0/paybooc-Light.woff")
+    format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
+:root {
+  --title-font-family: "ONE-Mobile-Title";
+  --select-font-family: "paybooc-Light";
+  --delete-button-hover-color: rgba(255, 0, 0, 0.658);
+  --select-box-shadow: inset 0.1rem 0.1rem 0.3rem #c8d0e7,
+    inset -0.2rem -0.2rem 0.5rem #ffffff;
+  --container-box-shadow: 0.2rem 0.2rem 0.4rem #c8d0e7,
+    -0.2rem -0.2rem 0.5rem #ffffff;
+}
+
 .form {
   width: 90%;
   height: 18rem;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-  background-color: rgba(255, 255, 255, 0.164);
   border-radius: 0.5rem;
   margin: 1.5rem 0;
   position: relative;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+  font-size: 16px;
 }
 
 .card_name {
   display: flex;
+  position: relative;
   flex-direction: column;
   width: 30%;
   height: 20%;
@@ -27,11 +55,12 @@
   align-items: center;
   justify-content: center;
   padding-bottom: 1.5rem;
+  font-family: var(--title-font-family);
 }
 
 .name_title {
   font-size: 0.8rem;
-  font-family: "nanum_bold";
+  font-family: var(--title-font-family);
 }
 
 .BtnInsert {
@@ -48,11 +77,13 @@
   display: flex;
   width: 7rem;
   border: none;
-  border-radius: 4px;
+  border-radius: 1rem;
   background-color: rgba(255, 255, 255, 0.616);
-  height: 1.2rem;
+  height: 1.3rem;
   margin: 0 0.3rem;
   text-align: center;
+  font-family: var(--select-font-family);
+  box-shadow: var(--select-box-shadow);
 }
 
 .theme {
@@ -66,16 +97,20 @@
   align-items: center;
   text-align: center;
   padding-bottom: 1rem;
+  font-family: var(--title-font-family);
 }
 
 .theme_title {
   font-size: 0.8rem;
-  font-family: "nanum_bold";
+  font-family: var(--title-font-family);
 }
 
 .theme_select {
   width: 6rem;
   padding: 0.3rem;
+  font-family: var(--select-font-family);
+  border-radius: 1rem;
+  box-shadow: var(--select-box-shadow);
 }
 
 .deck {
@@ -92,7 +127,7 @@
 
 .deck1_title,
 .deck2_title {
-  font-family: "nanum_bold";
+  font-family: var(--title-font-family);
   font-size: 0.8rem;
   text-align: center;
 }
@@ -101,6 +136,9 @@
 .deck2_select {
   width: 6rem;
   padding: 0.3rem;
+  border-radius: 1rem;
+  font-family: var(--select-font-family);
+  box-shadow: var(--select-box-shadow);
 }
 
 .champion,
@@ -110,7 +148,7 @@
 
 .champion {
   flex-wrap: wrap;
-  width: 15rem;
+  width: 17rem;
   margin-top: 1rem;
   background-color: rgba(255, 255, 255, 0.336);
   align-items: center;
@@ -118,12 +156,16 @@
   text-align: center;
   padding: 0.5rem;
   border-radius: 0.5rem;
+  box-shadow: var(--container-box-shadow);
 }
 
 .champion_container {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
+  border-radius: 1rem;
+  border: 0.5px solid rgba(82, 80, 80, 0.247);
+  margin: 0.1rem;
 }
 
 .selectChampion {
@@ -142,7 +184,7 @@
   align-items: center;
   justify-content: center;
   margin: 0.7rem 0;
-  font-family: "nanum_bold";
+  font-family: var(--title-font-family);
 }
 
 .cham_name {
@@ -158,18 +200,19 @@
   font-size: 0.7rem;
   width: 3rem;
   height: 1rem;
+  font-family: var(--select-font-family);
 }
 
 .item {
   display: flex;
   flex-wrap: wrap;
-  width: 15rem;
+  width: 17rem;
   margin-top: 1rem;
   align-items: center;
   justify-content: center;
   text-align: center;
-  background-color: rgba(255, 255, 255, 0.336);
   border-radius: 0.5rem;
+  box-shadow: var(--container-box-shadow);
 }
 
 .item_title {
@@ -179,7 +222,7 @@
   align-items: center;
   justify-content: center;
   margin: 1rem 0;
-  font-family: "nanum_bold";
+  font-family: var(--title-font-family);
 }
 
 .item_img {
@@ -198,79 +241,27 @@
 .BtnDelete {
   position: absolute;
   display: flex;
-  width: 3rem;
-  height: 2rem;
   align-items: center;
   justify-content: center;
   text-align: center;
-  font-size: 0.7rem;
   background: none;
   border: none;
-  background-color: rgba(148, 142, 145, 0.192);
-  color: white;
-  border-radius: 2px;
-  box-shadow: 2px 2px 2px gray;
+  color: rgba(156, 152, 152, 0.719);
   cursor: pointer;
   transition: all 100ms ease;
   top: 0;
-  right: 0;
+  right: -0.3rem;
+  font-size: 1.8rem;
 }
 
 .BtnDelete:hover {
   transform: scale(0.95);
-  background-color: rgba(255, 0, 0, 0.658);
+  color: var(--delete-button-hover-color);
 }
 
-@media screen and (max-width: 80rem) {
-  .card_name,
-  .theme,
-  .deck {
-    border: none;
-  }
-
-  .champion_title,
-  .item_title {
-    margin: 0.2rem;
-    font-size: 0.75rem;
-  }
-
-  .BtnDelete {
-    height: 1.2rem;
-  }
-}
-
-@media screen and (max-width: 40rem) {
-  .card_name,
-  .theme,
-  .deck {
-    border: none;
-  }
-
-  .cardname_input {
-    width: 7rem;
-  }
-
-  .champion {
-    height: 6rem;
-    width: 17rem;
-  }
-
+@media screen and (max-width: 670px) {
+  .champion,
   .item {
-    height: 6rem;
-    width: 17rem;
-  }
-
-  .champion_title,
-  .item_title {
-    font-size: 0.7rem;
-    margin: 0;
-    margin: 0.1rem 0;
-  }
-  .cham_name {
-    margin: 0.1rem;
-  }
-
-  .item_img {
-    margin: 0.15rem;
+    width: 13rem;
   }
 }
