--- a/src/components/cards/cards.module.css
+++ b/src/components/cards/cards.module.css
@@ -23,9 +23,7 @@
   width: 100%;
   max-width: 80rem;
   height: 100%;
-  /* background-image: url(../../image/background_gradient.jpg); */
-  background-color: rgba(255, 255, 255, 0.336);
-  overflow: auto;
+  overflow-y: auto;
   margin: 0 auto;
   margin-top: 0.9rem;
 }
@@ -41,7 +39,6 @@
   flex-direction: column;
   width: 50%;
   height: 100%;
-  overflow-y: scroll;
   overflow-x: hidden;
 }
 
@@ -50,7 +47,6 @@
   flex-direction: column;
   width: 50%;
   height: 100%;
-  overflow-y: scroll;
   overflow-x: hidden;
 }
 
