--- a/src/components/home/home.module.css
+++ b/src/components/home/home.module.css
@@ -37,7 +37,8 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
-  background-image: url(../../image/background_image_2.jpg);
+  /* background-image: url(../../image/background_image_2.jpg); */
+  background: white;
   -ms-overflow-style: none;
 }
 
@@ -248,7 +249,6 @@
 .BtnSlide1,
 .BtnSlide2,
 .BtnSlide3 {
-  /* position: fixed; */
   color: black;
   background-color: transparent;
   border-radius: 50%;
