--- a/src/components/home/main_home.module.css
+++ b/src/components/home/main_home.module.css
@@ -14,17 +14,13 @@
   --header-font-family: "Y_Spotlight";
 }
 
-.rect {
-  height: 700px;
-  width: 700px;
-}
-
 .home {
   display: flex;
   flex-direction: column;
   width: 100%;
   height: 100vh;
   font-size: 16px;
+  background-color: white;
 }
 
 .header {
@@ -66,6 +62,11 @@
   left: 30%;
 }
 
+.rect {
+  height: 700px;
+  width: 1000px;
+}
+
 .upper_circle_container {
   box-sizing: border-box;
   padding: 1em;
@@ -73,18 +74,67 @@
   fill-rule: evenodd;
 }
 
-.home_img1 {
+.home_image_container {
   display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 100%;
+  height: 40rem;
   position: absolute;
   top: 10%;
-  left: 30%;
+}
+
+.home_img1,
+.home_img2,
+.home_img3 {
+  position: absolute;
+  display: flex;
+  left: 32%;
+  height: 40rem;
   overflow: hidden;
-  animation: slideToRight 1s linear 1;
+  /* animation: slideToRight 1s linear 1;
+  -webkit-transition: -webkit-transform 0.3s 0.2s ease-in-out;
+  -moz-transition: -moz-transform 0.3s 0.2s ease-in-out;
+  -ms-transition: -ms-transform 0.3s 0.2s ease-in-out;
+  -o-transition: -o-transform 0.3s 0.2s ease-in-out;
+  transition: transform 0.3s 0.2s ease-in-out; */
+}
+
+.home_img1 {
+  opacity: 1;
+  display: flex;
+  animation: showImg 4s;
+  animation-delay: 0;
   -webkit-transition: -webkit-transform 0.3s 0.2s ease-in-out;
   -moz-transition: -moz-transform 0.3s 0.2s ease-in-out;
   -ms-transition: -ms-transform 0.3s 0.2s ease-in-out;
   -o-transition: -o-transform 0.3s 0.2s ease-in-out;
   transition: transform 0.3s 0.2s ease-in-out;
+  animation-fill-mode: forwards;
+}
+
+.home_img2 {
+  opacity: 1;
+  animation: showImg 5s;
+  animation-delay: 4s;
+  -webkit-transition: -webkit-transform 0.3s 0.2s ease-in-out;
+  -moz-transition: -moz-transform 0.3s 0.2s ease-in-out;
+  -ms-transition: -ms-transform 0.3s 0.2s ease-in-out;
+  -o-transition: -o-transform 0.3s 0.2s ease-in-out;
+  transition: transform 0.3s 0.2s ease-in-out;
+  animation-fill-mode: both;
+}
+
+.home_img3 {
+  opacity: 1;
+  animation: showImg 5s;
+  animation-delay: 10s;
+  -webkit-transition: -webkit-transform 0.3s 0.2s ease-in-out;
+  -moz-transition: -moz-transform 0.3s 0.2s ease-in-out;
+  -ms-transition: -ms-transform 0.3s 0.2s ease-in-out;
+  -o-transition: -o-transform 0.3s 0.2s ease-in-out;
+  transition: transform 0.3s 0.2s ease-in-out;
+  animation-fill-mode: backwards;
 }
 
 .upper_circle {
@@ -92,14 +142,124 @@
   z-index: 100;
 }
 
+.home_text1 {
+  display: flex;
+  position: absolute;
+  top: 2rem;
+  left: 4rem;
+  animation: text-sliding-right 1s linear 1;
+  z-index: 200;
+}
+
+.home_text2 {
+  display: flex;
+  position: absolute;
+  top: 7rem;
+  right: 15rem;
+  animation: text-sliding-left 1s linear 1;
+  z-index: 200;
+}
+
 @keyframes slideToRight {
+  0% {
+    opacity: 0;
+    transform: translateX(-7%);
+    -webkit-transform: translateX(-7%);
+    -moz-transform: translateX(-7%);
+    -ms-transform: translateX(-7%);
+    -o-transform: translateX(-7%);
+  }
+
+  50% {
+    opacity: 0.5;
+    transform: translateX(0%);
+    -webkit-transform: translateX(0%);
+    -moz-transform: translateX(0%);
+    -ms-transform: translateX(0%);
+    -o-transform: translateX(0%);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateX(0%);
+    -webkit-transform: translateX(0%);
+    -moz-transform: translateX(0%);
+    -ms-transform: translateX(0%);
+    -o-transform: translateX(0%);
+    display: none;
+  }
+}
+
+@keyframes text-sliding-right {
+  from {
+    transform: translateX(-10%);
+  }
+  to {
+    transform: translateX(0%);
+  }
+}
+
+@keyframes text-sliding-left {
+  from {
+    transform: translateX(10%);
+  }
+  to {
+    transform: translateX(0%);
+  }
+}
+
+/* @keyframes showImg {
+  from {
+    opacity: 1;
+    transform: translateX(-7%);
+    -webkit-transform: translateX(-7%);
+    -moz-transform: translateX(-7%);
+    -ms-transform: translateX(-7%);
+    -o-transform: translateX(-7%);
+  }
+  to {
+    opacity: 0;
+    display: none;
+    transform: translateX(0%);
+    -webkit-transform: translateX(0%);
+    -moz-transform: translateX(0%);
+    -ms-transform: translateX(0%);
+    -o-transform: translateX(0%);
+  }
+} */
+
+@keyframes showImg {
+  0% {
+    opacity: 0;
+    transform: translateX(-7%);
+    -webkit-transform: translateX(-7%);
+    -moz-transform: translateX(-7%);
+    -ms-transform: translateX(-7%);
+    -o-transform: translateX(-7%);
+  }
+
+  50% {
+    opacity: 1;
+    transform: translateX(0%);
+    -webkit-transform: translateX(0%);
+    -moz-transform: translateX(0%);
+    -ms-transform: translateX(0%);
+    -o-transform: translateX(0%);
+  }
+
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes stayImg {
   from {
     opacity: 0;
-    transform: translateX(-10%);
-    -webkit-transform: translateX(-10%);
-    -moz-transform: translateX(-10%);
-    -ms-transform: translateX(-10%);
-    -o-transform: translateX(-10%);
+    transform: translateX(-7%);
+    -webkit-transform: translateX(-7%);
+    -moz-transform: translateX(-7%);
+    -ms-transform: translateX(-7%);
+    -o-transform: translateX(-7%);
   }
 
   to {
