--- a/src/components/home/main_home.module.css
+++ b/src/components/home/main_home.module.css
@@ -12,6 +12,7 @@
 
 :root {
   --header-font-family: "Y_Spotlight";
+  --home-text-font-family: "Y_Spotlight";
 }
 
 .home {
@@ -20,7 +21,7 @@
   width: 100%;
   height: 100vh;
   font-size: 16px;
-  background-color: white;
+  background-color: black;
 }
 
 .header {
@@ -53,6 +54,15 @@
   font-family: var(--header-font-family);
 }
 
+.login_button:hover {
+  border-radius: 50%;
+  width: 7rem;
+  height: 7rem;
+  transform: scale(2);
+  background-color: skyblue;
+  z-index: 200;
+}
+
 .home_container {
   display: flex;
   width: 100%;
@@ -61,7 +71,7 @@
   border-bottom: 1px solid black;
 }
 
-.home_container > svg {
+.home_circle_container {
   position: absolute;
   top: 8%;
   left: 30%;
@@ -69,7 +79,7 @@
 
 .rect {
   height: 700px;
-  width: 1000px;
+  width: 100%;
 }
 
 .upper_circle_container {
@@ -97,12 +107,6 @@
   left: 32%;
   height: 40rem;
   overflow: hidden;
-  /* animation: slideToRight 1s linear 1;
-  -webkit-transition: -webkit-transform 0.3s 0.2s ease-in-out;
-  -moz-transition: -moz-transform 0.3s 0.2s ease-in-out;
-  -ms-transition: -ms-transform 0.3s 0.2s ease-in-out;
-  -o-transition: -o-transform 0.3s 0.2s ease-in-out;
-  transition: transform 0.3s 0.2s ease-in-out; */
 }
 
 .home_img1 {
@@ -133,7 +137,7 @@
 .home_img3 {
   opacity: 1;
   animation: showImg 5s;
-  animation-delay: 10s;
+  animation-delay: 8s;
   -webkit-transition: -webkit-transform 0.3s 0.2s ease-in-out;
   -moz-transition: -moz-transform 0.3s 0.2s ease-in-out;
   -ms-transition: -ms-transform 0.3s 0.2s ease-in-out;
@@ -183,6 +187,50 @@
   z-index: 200;
 }
 
+.home_text_container {
+  display: flex;
+  position: absolute;
+  bottom: 0rem;
+  left: 1rem;
+  width: 40%;
+  height: 60%;
+  animation: sliding-right 1s linear 1;
+}
+
+.home_text {
+  position: absolute;
+  left: 9rem;
+  bottom: 5rem;
+  font-size: 4rem;
+  color: white;
+  font-family: var(--home-text-font-family);
+}
+
+.home_button_login {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  font-family: var(--home-text-font-family);
+  font-size: 1.2rem;
+  color: white;
+  background-color: rgba(105, 90, 205, 0.473);
+  position: absolute;
+  right: 35rem;
+  bottom: 10rem;
+  border-radius: 50%;
+  width: 10rem;
+  height: 10rem;
+  border: none;
+  box-shadow: 4px 4px 5px darkmagenta, -2px -2px 2px darkmagenta;
+  cursor: pointer;
+  transition: all 0.1s ease;
+}
+
+.home_button_login :hover {
+  transform: scale(1.1);
+}
+
 @keyframes slideToRight {
   0% {
     opacity: 0;
@@ -213,7 +261,7 @@
   }
 }
 
-@keyframes text-sliding-right {
+@keyframes sliding-right {
   from {
     transform: translateX(-10%);
   }
@@ -230,26 +278,6 @@
     transform: translateX(0%);
   }
 }
-
-/* @keyframes showImg {
-  from {
-    opacity: 1;
-    transform: translateX(-7%);
-    -webkit-transform: translateX(-7%);
-    -moz-transform: translateX(-7%);
-    -ms-transform: translateX(-7%);
-    -o-transform: translateX(-7%);
-  }
-  to {
-    opacity: 0;
-    display: none;
-    transform: translateX(0%);
-    -webkit-transform: translateX(0%);
-    -moz-transform: translateX(0%);
-    -ms-transform: translateX(0%);
-    -o-transform: translateX(0%);
-  }
-} */
 
 @keyframes showImg {
   0% {
