--- a/src/components/login/login.module.css
+++ b/src/components/login/login.module.css
@@ -157,6 +157,7 @@
   text-align: center;
   transition: all 100ms ease;
   vertical-align: middle;
+  cursor: pointer;
 }
 
 .BtnGoogleLogin:hover,
