--- a/src/components/card_editor/card_editor.module.css
+++ b/src/components/card_editor/card_editor.module.css
@@ -191,14 +191,15 @@
   display: flex;
   flex-direction: row;
   margin: 0.2rem;
-  background-color: white;
+  background-color: transparent;
   color: black;
   border-radius: 2px;
   padding: 0.2rem;
   align-items: center;
   justify-content: center;
   font-size: 0.7rem;
-  width: 3rem;
+  font-weight: 700;
+  width: 3.2rem;
   height: 1rem;
   font-family: var(--select-font-family);
 }
@@ -263,5 +264,40 @@
   .champion,
   .item {
     width: 13rem;
+  }
+}
+
+@media screen and (max-width: 540px) {
+  .form {
+    height: 25rem;
+    width: 95%;
+  }
+
+  .card_name {
+    margin: 0.5rem;
+    margin-top: 1rem;
+  }
+
+  .theme {
+    margin: 0.5rem;
+  }
+
+  .deck {
+    margin: 0.5rem;
+  }
+
+  .champion {
+    margin: 1.5rem 1rem;
+  }
+
+  .item {
+    margin-top: 2rem;
+    margin-left: 1rem;
+  }
+}
+
+@media screen and (max-width: 415px) {
+  .BtnDelete {
+    font-size: 1.5rem;
   }
 }
