--- a/src/components/card_maker/card_maker.module.css
+++ b/src/components/card_maker/card_maker.module.css
@@ -5,6 +5,7 @@
 
 .card_maker {
   display: flex;
+  position: relative;
   flex-direction: column;
   background-color: transparent;
   justify-content: center;
@@ -115,5 +116,11 @@
 
   .card {
     height: 100%;
+  }
+}
+
+@media screen and (max-width: 415px) {
+  .card {
+    justify-content: start;
   }
 }
