--- a/src/components/cards/cards.module.css
+++ b/src/components/cards/cards.module.css
@@ -43,12 +43,46 @@
   overflow-x: hidden;
 }
 
+.card_maker::-webkit-scrollbar {
+  width: 10px;
+}
+
+.card_maker::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.671);
+  box-shadow: 1px 1px 1px gray;
+  border-radius: 1rem;
+  padding: 0.5rem 0;
+  width: 9px;
+}
+
+.card_maker::-webkit-scrollbar-track {
+  width: 10px;
+  background-color: white;
+}
+
 .card_container {
   display: flex;
   flex-direction: column;
   width: 50%;
   height: 100%;
   overflow-x: hidden;
+}
+
+.card_container::-webkit-scrollbar {
+  width: 10px;
+}
+
+.card_container::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.671);
+  box-shadow: 1px 1px 1px gray;
+  border-radius: 1rem;
+  padding: 0.5rem 0;
+  width: 9px;
+}
+
+.card_container::-webkit-scrollbar-track {
+  width: 10px;
+  background-color: white;
 }
 
 .footer {
@@ -79,5 +113,18 @@
   .card_container {
     width: 90%;
     height: 50%;
+  }
+}
+
+@media screen and (max-width: 415px) {
+  .card_container {
+    width: 100%;
+    align-items: center;
+    box-shadow: 1px 1px 4px black;
+  }
+
+  .card_maker {
+    width: 100%;
+    height: 80%;
   }
 }
