--- a/src/components/home/main_home.module.css
+++ b/src/components/home/main_home.module.css
@@ -41,30 +41,27 @@
 .header_title {
   font-size: 2rem;
   color: white;
+  cursor: default;
 }
 
 .login_button {
   display: block;
   cursor: pointer;
-  height: 2rem;
-  width: 4rem;
+  height: 2.5rem;
+  width: 5rem;
   text-align: center;
   color: white;
   border: none;
   background: transparent;
   font-size: 1.2rem;
   font-family: var(--header-font-family);
+  align-items: center;
+  justify-content: center;
 }
 
 .login_button:hover {
-  border-radius: 50%;
-  width: 7rem;
-  height: 7rem;
-  transform: scale(1.5);
-  background-color: #ffff56;
-  color: black;
-  font-weight: 700;
-  z-index: 200;
+  transform: scale(1.2);
+  color: firebrick;
 }
 
 .home_container {
@@ -171,7 +168,7 @@
   z-index: 3;
   position: absolute;
   color: white;
-  left: 5rem;
+  left: 7rem;
   bottom: 5rem;
   font-family: var(--home-text-font-family);
   font-size: 3rem;
@@ -182,7 +179,7 @@
   display: flex;
   z-index: 3;
   position: absolute;
-  right: 5rem;
+  right: 7rem;
   top: 5rem;
   color: white;
   font-family: var(--home-text-font-family);
