--- a/src/components/cards/cards.module.css
+++ b/src/components/cards/cards.module.css
@@ -95,6 +95,12 @@
   text-align: center;
 }
 
+.BtnDarkMode {
+  display: flex;
+  width: 3rem;
+  height: 3rem;
+}
+
 @media screen and (max-width: 80rem) {
   .card_board {
     flex-direction: column;
