--- a/src/components/login/login.module.css
+++ b/src/components/login/login.module.css
@@ -21,7 +21,8 @@
   display: flex;
   width: 100vw;
   height: 100vh;
-  background-image: url(../../image/login_background.jpg);
+  background: url(../../image/login_background.jpg) center center / cover
+    no-repeat;
 }
 
 .login_container {
@@ -127,13 +128,27 @@
   padding-left: 1rem;
 }
 
-.LoginImage {
+.login_image_container {
+  display: flex;
   width: 50%;
   overflow: hidden;
   align-items: center;
   justify-content: center;
   height: 100%;
   border-radius: 0 4px 4px 0;
+  text-align: center;
+  background: -webkit-linear-gradient(
+    -180deg,
+    rgb(226, 160, 76),
+    rgb(234, 70, 60)
+  );
+  background: linear-gradient(-180deg, rgb(226, 160, 76), rgb(234, 70, 60));
+}
+
+.login_img {
+  height: auto;
+  width: 80%;
+  margin: 1rem;
 }
 
 .social_login {
@@ -173,4 +188,137 @@
   align-items: center;
   justify-content: center;
   text-align: center;
+}
+
+@media screen and (max-width: 950px) {
+  .login_container {
+    width: 80%;
+    height: 85%;
+    flex-direction: column;
+    border: none;
+    border-radius: 4px;
+  }
+
+  .login_wrap {
+    width: 100%;
+    height: 75%;
+    background-color: white;
+    padding: 1rem 0;
+    border-radius: 4px 4px 0 0;
+  }
+
+  .login_image_container {
+    width: 100%;
+    height: 25%;
+    border-radius: 0 0 4px 4px;
+
+    background: -webkit-linear-gradient(
+      -180deg,
+      rgb(226, 160, 76),
+      rgb(234, 70, 60)
+    );
+    background: linear-gradient(-180deg, rgb(226, 160, 76), rgb(234, 70, 60));
+  }
+
+  .login_img {
+    height: 95%;
+    width: auto;
+  }
+
+  .title {
+    margin: 0;
+    font-size: 2.7rem;
+    letter-spacing: 0.1rem;
+    height: 6rem;
+  }
+
+  .form {
+    width: 70%;
+    height: 30%;
+  }
+
+  .signup_link {
+    margin-top: 1rem;
+  }
+
+  .BtnLogin {
+    padding: 1rem;
+    margin-bottom: 3rem;
+    font-size: 1.2rem;
+    margin-top: 0.5rem;
+  }
+}
+
+@media screen and (max-width: 540px) {
+  .login_container {
+    background: transparent;
+    background-color: white;
+  }
+
+  .title {
+    font-size: 1.8rem;
+    height: 15%;
+  }
+
+  .form {
+    width: 75%;
+  }
+
+  .BtnLogin {
+    font-size: 1rem;
+    padding: 0.7rem;
+  }
+
+  .signup_link {
+    font-size: 0.8rem;
+    margin-top: 1.8rem;
+  }
+
+  .social_login {
+    margin-top: 1rem;
+  }
+}
+
+@media screen and (max-width: 376px) {
+  .title {
+    font-size: 1.5rem;
+    height: 17%;
+  }
+
+  .login_wrap {
+    height: 80%;
+  }
+
+  .login_image_container {
+    height: 20%;
+  }
+
+  .login_img {
+    height: 100%;
+    margin: 0;
+  }
+
+  .form {
+    height: 40%;
+  }
+
+  .input_email::placeholder,
+  .input_password::placeholder {
+    font-size: 0.8rem;
+  }
+
+  .social_login {
+    margin-top: 0.5rem;
+  }
+
+  .BtnGithubLogin,
+  .BtnGoogleLogin {
+    padding: 0.3rem 2rem;
+    margin: 0.2rem 0;
+  }
+
+  .signup_link {
+    font-size: 0.7rem;
+    margin-bottom: 0;
+  }
 }
