--- a/src/components/login/signup.module.css
+++ b/src/components/login/signup.module.css
@@ -1,5 +1,3 @@
-/* 반응형으로 고치기 */
-
 * {
   box-sizing: border-box;
 }
@@ -23,7 +21,8 @@
   display: flex;
   width: 100vw;
   height: 100vh;
-  background-image: url(../../image/signup_background.jpg);
+  background: url(../../image/signup_background.jpg) center center / cover
+    no-repeat;
 }
 
 .sign_container {
@@ -128,11 +127,103 @@
   margin-bottom: 0;
 }
 
-.SignUpImage {
+.signup_image_container {
+  display: flex;
   width: 50%;
   overflow: hidden;
+  text-align: center;
   align-items: center;
   justify-content: center;
   height: 100%;
   border-radius: 0 4px 4px 0;
+  background: -webkit-linear-gradient(
+    -180deg,
+    rgb(117, 205, 135),
+    rgb(27, 121, 242)
+  );
+  background: linear-gradient(-180deg, rgb(117, 205, 135), rgb(27, 121, 242));
+}
+
+.signup_img {
+  width: 80%;
+  height: auto;
+}
+
+@media screen and (max-width: 950px) {
+  .sign_container {
+    flex-direction: column;
+    border: none;
+    border-radius: 4px;
+    height: 80%;
+  }
+
+  .sign_up_wrap {
+    width: 100%;
+    height: 80%;
+    border-radius: 4px 4px 0 0;
+  }
+
+  .signup_image_container {
+    width: 100%;
+    height: 20%;
+    border-radius: 0 0 4px 4px;
+  }
+
+  .signup_img {
+    height: 100%;
+    width: auto;
+  }
+
+  .title {
+    font-size: 2.5rem;
+    letter-spacing: 0.1rem;
+  }
+
+  .BtnSignUp {
+    padding: 1rem;
+    font-size: 0.9rem;
+  }
+
+  .login_link {
+    font-size: 0.9rem;
+  }
+}
+
+@media screen and (max-width: 541px) {
+  .sign_container {
+    height: 90%;
+    width: 90%;
+    margin: 2rem auto;
+  }
+
+  .title {
+    font-size: 2rem;
+    height: 7rem;
+    margin: 0;
+  }
+
+  .BtnSignUp {
+    margin-bottom: 5rem;
+  }
+}
+
+@media screen and (max-width: 376px) {
+  .title {
+    font-size: 1.5rem;
+    height: 6rem;
+  }
+
+  .input_email,
+  .input_password {
+    width: 100%;
+  }
+
+  .input_password::placeholder,
+  .input_email::placeholder {
+    font-size: 0.8rem;
+  }
+
+  .BtnSignUp {
+    padding: 0.5rem;
+  }
 }
