--- a/src/components/card_container/card_container.module.css
+++ b/src/components/card_container/card_container.module.css
@@ -13,6 +13,13 @@
   src: url(../../font/NanumGothic-Bold.ttf);
 }
 
+:root {
+  --name-font-family: "nanum_bold";
+  --deck-font-family: "lol_regular";
+  --title-font-family: "lol_regular";
+  --card-box-shadow: 7px 5px 5px rgba(128, 128, 128, 0.644);
+}
+
 .content {
   width: 60%;
   margin: 0;
@@ -20,14 +27,14 @@
 }
 
 .name {
-  font-family: "nanum_bold";
+  font-family: var(--name-font-family);
   text-align: left;
   margin: 0.5rem;
 }
 
 .deck1,
 .deck2 {
-  font-family: "lol_regular";
+  font-family: var(--deck-font-family);
   text-align: center;
 }
 
@@ -40,10 +47,10 @@
 }
 
 .title {
-  font-family: "lol_regular";
+  font-family: var(--title-font-family);
   font-size: 1.5rem;
   text-align: center;
-  color: white;
+  color: black;
 }
 
 .selected_cham {
@@ -65,7 +72,7 @@
 }
 
 .cham_title {
-  font-family: "lol_regular";
+  font-family: var(--title-font-family);
 }
 
 .card {
@@ -74,14 +81,14 @@
   width: 100%;
   height: 17rem;
   border: 1px solid rgba(0, 0, 0, 0.144);
-  box-shadow: 7px 5px 5px rgba(128, 128, 128, 0.644);
+  box-shadow: var(--card-box-shadow);
 }
 
 .item_title {
   font-size: 1.2rem;
   width: 100%;
   text-align: center;
-  font-family: "lol_regular";
+  font-family: var(--title-font-family);
 }
 
 .item {
