--- a/src/components/card_maker/card_maker.module.css
+++ b/src/components/card_maker/card_maker.module.css
@@ -28,7 +28,7 @@
   font-family: "lol_regular";
   margin: 0;
   margin: 0.5rem 0;
-  color: white;
+  color: black;
   align-items: center;
   justify-content: center;
   text-align: center;
