--- a/src/components/cards/cards.module.css
+++ b/src/components/cards/cards.module.css
@@ -10,12 +10,20 @@
   font-style: normal;
 }
 
-.card {
+.card.light {
   width: 100%;
   height: 100vh;
   display: flex;
   flex-direction: column;
   background-color: #e0e5eb;
+}
+
+.card.dark {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  background-color: #000;
 }
 
 .card_board {
@@ -97,8 +105,26 @@
 
 .BtnDarkMode {
   display: flex;
+  position: absolute;
+  bottom: 1rem;
+  left: 1rem;
   width: 3rem;
   height: 3rem;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  font-size: 2rem;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  z-index: 4;
+  color: gold;
+  border-radius: 50%;
+  background-color: white;
+}
+
+.BtnDarkMode:hover {
+  color: black;
 }
 
 @media screen and (max-width: 80rem) {
