--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -30,6 +30,18 @@
   box-shadow: 4px 4px 8px lightgray;
 }
 
+.header.light {
+  box-shadow: 4px 4px 8px lightgray;
+  background-color: transparent;
+  background-color: #e0e5eb59;
+}
+
+.header.dark {
+  box-shadow: none;
+  background-color: transparent;
+  border-bottom: 2px solid gray;
+}
+
 .header_img {
   height: 4rem;
 }
@@ -55,8 +67,21 @@
   color: black;
 }
 
-.link_about {
+.header.light > .about > .link_about {
   color: black;
+  text-decoration: none;
+  padding: 0.3rem;
+  font-size: 1.3rem;
+  font-family: var(--header-button-font-family);
+  transition: all 0.2s ease;
+}
+
+.header.dark > .about {
+  color: white;
+}
+
+.header.dark > .about > .link_about {
+  color: white;
   text-decoration: none;
   padding: 0.3rem;
   font-size: 1.3rem;
@@ -88,6 +113,10 @@
 
 .BtnLogout:hover {
   transform: scale(1.1);
+}
+
+.header.dark > .BtnLogout {
+  color: white;
 }
 
 @media screen and (max-width: 415px) {
